--- a/app/templates/unitOfMeasurements/unitOfMeasurements.html
+++ b/app/templates/unitOfMeasurements/unitOfMeasurements.html
@@ -7,7 +7,7 @@ Units of Measurment
 {% block page_content %}
 <div>
     <ol class = "breadcrumb">
-        <li class = "active">..</li>
+        <li class = "active"><span class = "glyphicon glyphicon-home"></li>
     </ol>
 </div>
 <div class = "page-header">
