--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,34 +28,34 @@
                         </ul>
                     </li>
                 {% endif %}
-                    <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Tags <span class = "caret"></span></a>
-                        <ul class = "dropdown-menu">
-                            <li><a href = "{{ url_for("tags.selectTag") }}">Tags</a></li>
-                            {% if current_user.isAdministrator() %}
-                                <li><a href = "{{ url_for("tags.importTags") }}">Import</a></li>
-                                <li><a href = "{{ url_for("tags.exportTags") }}">Export</a></li>
-                            {% endif %}
-                        </ul>
-                    </li>
-                {% if current_user.isAdministrator() %}
-                    <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements <span class = "caret"></span></a>
-                        <ul class = "dropdown-menu">
-                            <li><a href = "{{ url_for("elements.selectElement") }}">Elements</a></li>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Tags <span class = "caret"></span></a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("tags.selectTag") }}">Tags</a></li>
+                        {% if current_user.isAdministrator() %}
+                            <li><a href = "{{ url_for("tags.importTags") }}">Import</a></li>
+                            <li><a href = "{{ url_for("tags.exportTags") }}">Export</a></li>
+                        {% endif %}
+                    </ul>
+                </li>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements <span class = "caret"></span></a>
+                    <ul class = "dropdown-menu">
+                        <li><a href = "{{ url_for("elements.selectElement") }}">Elements</a></li>
+                        {% if current_user.isAdministrator() %}
                             <li><a href = "{{ url_for("elementAttributes.importElementAttributes") }}">Import</a></li>
                             <li><a href = "{{ url_for("elementAttributes.exportElementAttributes") }}">Export</a></li>
+                        {% endif %}
+                    </ul>
+                </li>
+                {% if config["IS_RASPBERRY_PI"] and current_user.isAdministrator() %}
+                    <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Raspberry Pi <span class = "caret"></span></a>
+                        <ul class = "dropdown-menu">
+                            <li><a href = "{{ url_for("raspberryPiUtilities.backupDatabase") }}">Backup Database</a></li>
+                            <li><a href = "{{ url_for("raspberryPiUtilities.info") }}">Info</a></li>
+                            <li><a href = "{{ url_for("raspberryPiUtilities.reboot") }}">Reboot</a></li>
+                            <li><a href = "{{ url_for("raspberryPiUtilities.restoreDatabase") }}">Restore Database</a></li>
+                            <li><a href = "{{ url_for("raspberryPiUtilities.shutdown") }}">Shutdown</a></li>
                         </ul>
                     </li>
-                    {% if config["IS_RASPBERRY_PI"] %}
-                        <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Raspberry Pi <span class = "caret"></span></a>
-                            <ul class = "dropdown-menu">
-                                <li><a href = "{{ url_for("raspberryPiUtilities.backupDatabase") }}">Backup Database</a></li>
-                                <li><a href = "{{ url_for("raspberryPiUtilities.info") }}">Info</a></li>
-                                <li><a href = "{{ url_for("raspberryPiUtilities.reboot") }}">Reboot</a></li>
-                                <li><a href = "{{ url_for("raspberryPiUtilities.restoreDatabase") }}">Restore Database</a></li>
-                                <li><a href = "{{ url_for("raspberryPiUtilities.shutdown") }}">Shutdown</a></li>
-                            </ul>
-                        </li>
-                    {% endif %}
                 {% endif %}
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Event Frames <span class = "caret"></span></a>
                     <ul class = "dropdown-menu">
