--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -10,21 +10,21 @@ Data Entry - Elements
 <div>
     <ol class = "breadcrumb">
         {% if childrenClass == "Enterprise" %}
-            <li class = "active">..</li>
+            <li class = "active"><span class = "glyphicon glyphicon-home"></li>
             {% set pageHeaderSubText = "Enterprises" %}
         {% elif childrenClass == "Site" %}
-            <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}"><span class = "glyphicon glyphicon-home"></a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set pageHeaderSubText = "Sites" %}
         <!-- "and parent" checks for systems that have not been configured with a site yet. -->
         {% elif childrenClass == "ElementTemplate" and parent %}
-            <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}"><span class = "glyphicon glyphicon-home"></a></li>
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Enterprise",
                 selectedId = parent.Enterprise.id()) }}">{{ parent.Enterprise.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set pageHeaderSubText = "Element Templates" %}
         {% elif childrenClass == "ElementAttributeTemplate" %}
-            <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}"><span class = "glyphicon glyphicon-home"></a></li>
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Enterprise",
                 selectedId = parent.Site.Enterprise.id()) }}">{{ parent.Site.Enterprise.Name }}</a></li>
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Site",
@@ -32,7 +32,7 @@ Data Entry - Elements
             <li class = "active">{{ parent.Name }}</li>
             {% set pageHeaderSubText = "Element Attribute Templates" %}
         {% elif childrenClass == "Element" %}
-            <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root") }}"><span class = "glyphicon glyphicon-home"></a></li>
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Enterprise",
                 selectedId = parent.Site.Enterprise.id()) }}">{{ parent.Site.Enterprise.Name }}</a></li>
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Site",
