--- a/app/templates/users/users.html
+++ b/app/templates/users/users.html
@@ -9,7 +9,7 @@ Users
 {% block page_content %}
 <div>
     <ol class = "breadcrumb">
-        <li class = "active">..</li>
+        <li class = "active"><span class = "glyphicon glyphicon-home"></li>
     </ol>
 </div>
 <div class = "page-header">
