--- a/app/templates/tags/select.html
+++ b/app/templates/tags/select.html
@@ -49,6 +49,7 @@ Tags
         <thead>
             <tr>
                 <th></th>
+                <th></th>
                 <th>Name</th>
                 <th>Description</th>
                 <th></th>
@@ -62,9 +63,12 @@ Tags
                         {% if childrenClass == "Tag" %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tagValues.listTagValues",
                                 tagId = child.id()) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
+                            <td><a class = "btn btn-default" title = "Grafana" href = "{{ child.grafanaUrl() }}" target = "_blank">
+                                <span class = "glyphicon glyphicon-stats"></span></a></td>
                         {% else %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tags.selectTag", selectedClass = child.__class__.__name__,
                                 selectedId = child.id()) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
+                            <td></td>
                         {% endif %}
                         <td>{{ child.Name }}</td>
                         <td>{{ child.Description }}</td>
@@ -101,6 +105,7 @@ Tags
                 "columns":
                 [
                     { "orderable": false }, // Tag values button.
+                    { "orderable": false }, // Grafana button.
                     null,
                     null,
                     { "orderable": false }, // Edit button.
