--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -79,7 +79,7 @@ Data Entry - Elements
                         {% if childrenClass == "Element" %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("elements.dashboard",
                                 elementId = child.id()) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
-                            <td><a class = "btn btn-default" title = "Grafana" href = "{{ child.grafanaUrl() }}" target = "_blank">
+                            <td><a class = "btn btn-default" title = "Grafana" href = "{{ "ElementValuesGraph" | grafanaUrl(child.id()) }}" target = "_blank">
                                 <span class = "glyphicon glyphicon-stats"></span></a></td>
                         {% elif childrenClass == "ElementAttributeTemplate" %}
                             <td></td>
@@ -155,7 +155,7 @@ Data Entry - Elements
             ({
                 "order":
                 [
-                    [1, "asc"]              // Name.
+                    [2, "asc"]              // Name.
                 ],
                 "columns":
                 [
