--- a/app/templates/tags/select.html
+++ b/app/templates/tags/select.html
@@ -63,7 +63,7 @@ Tags
                         {% if childrenClass == "Tag" %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tagValues.listTagValues",
                                 tagId = child.id()) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
-                            <td><a class = "btn btn-default" title = "Grafana" href = "{{ child.grafanaUrl() }}" target = "_blank">
+                            <td><a class = "btn btn-default" title = "Grafana" href = "{{ "TagValuesGraph" | grafanaUrl(child.id()) }}" target = "_blank">
                                 <span class = "glyphicon glyphicon-stats"></span></a></td>
                         {% else %}
                             <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tags.selectTag", selectedClass = child.__class__.__name__,
@@ -100,7 +100,7 @@ Tags
             ({
                 "order":
                 [
-                    [1, "asc"],             // Name.
+                    [2, "asc"],             // Name.
                 ],
                 "columns":
                 [
