--- a/app/templates/tagValues/tagValues.html
+++ b/app/templates/tagValues/tagValues.html
@@ -56,7 +56,7 @@ Tag Values
         <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValues.addTagValue", tagId = tag.TagId) }}" role = "button">
             <span class = "glyphicon glyphicon-plus"></span></a>
     {% endif %}
-    <a class = "btn btn-default" title = "Grafana" href = "{{ "TagValuesGraph" | grafanaUrl(tag.TagId) }}" target = "_blank">
+    <a class = "btn btn-default" title = "Grafana" href = "{{ "TagValuesGraph" | grafanaUrl({"tagId": tag.TagId}) }}" target = "_blank">
         <span class = "glyphicon glyphicon-stats"></span></a>        <br><br>
     <br><br>
     <table id = "tagValuesTable" class = "table">
